--- a/vulfpic/index.html
+++ b/vulfpic/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="../p5.js"></script>
-    <script src="../addons/p5.dom.js"></script>
-    <script src="../addons/p5.sound.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14//addons/p5.dom.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14//addons/p5.sound.js"></script>
     <script src="sketch.js"></script>
     <style> body {padding: 0; margin: 0;} </style>
   </head>
